syntax = "proto3";

package helloworld;

import "google/api/annotations.proto";

option go_package = "github.com/yscsky/kratos-examples/helloworld/helloworld;helloworld";

service Greeter {
  rpc SayHello(HelloRequest) returns (HelloResponse) {
    option (google.api.http) = {
      get: "/helloworld/{name}",
    };
  }
}

message HelloRequest {
  string name = 1;
}

message HelloResponse {
  string message = 1;
}
